<resources>
    <string name="app_name">Mylestone</string>
    <string name="retry">Retry</string>
    <string name="load_error">An error occurred while loading the Milestones</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="story">Story</string>
    <string name="create">Create</string>
    <string name="create_milestone">Create Milestone</string>

    <string name="user_name_error">Username should not be empty</string>
    <string name="password_does_not_match">Password doesn\'t match</string>

    <string name="email_not_valid">Email not valid</string>

    <string name="password_error">Password should be at least 6 characters</string>
    <string name="by_signing_up_you_agree_with_our_terms_and_conditions">by signing up you agree with our terms and
        conditions
    </string>
    <string name="make_it_secret">Make it secret</string>


    <string name="title_error">Title should not be empty</string>
    <string name="date_error">Date should not be empty</string>
    <string name="story_error">Story should not be empty</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="ad_app_id">ca-app-pub-7993350574053118~2242705835</string>
    <string name="ad_app_unit_id">ca-app-pub-7993350574053118/2789500746</string>




    <!--ca-app-pub-7993350574053118/2789500746-->
</resources>

