<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.bernovia.mylestone.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerInParent="true"
                app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
               />


        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_logo_ImageView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/ic_launcher_background"/>


        <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"


                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/proxima_nova_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_rounded_accent"
                    app:fontFamily="@font/proxima_nova_semi_bold"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#cbd1dc"
                    android:textSize="16sp"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:fontFamily="@font/proxima_nova_semi_bold"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgot_password_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/proxima_nova_semi_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"

            />
        </LinearLayout>

    </RelativeLayout>


</layout>

